--- a/src/app/races/races.component.html
+++ b/src/app/races/races.component.html
@@ -1,8 +1,6 @@
-<p>
-  races works!
-</p>
+<p>Races list</p>
 <ul>
-  <li *ngFor="let race of races">
+  <li *ngFor="let race of races | slice:0:4">
     <h2>{{ race.name }}</h2>
   </li>
 </ul>
