--- a/src/app/races/races.component.html
+++ b/src/app/races/races.component.html
@@ -1,6 +1,3 @@
-<p>Races list</p>
-<ul>
-  <li *ngFor="let race of races | slice:0:4">
-    <h2>{{ race.name }}</h2>
-  </li>
-</ul>
+  <div *ngFor="let race of races | slice:0:4">
+    <pr-race [raceModel]="race"></pr-race>
+  </div>
