--- a/src/app/race/race.component.html
+++ b/src/app/race/race.component.html
@@ -1,8 +1,6 @@
 <div>
   <h2>{{ raceModel.name }}</h2>
-  <ul>
-    <li *ngFor="let pony of raceModel.ponies">
-      <p>{{ pony.name }}</p>
-    </li>
-  </ul>
+    <div *ngFor="let pony of raceModel.ponies">
+      <pr-pony [ponyModel]="pony"></pr-pony>
+    </div>
 </div>
