--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<div class="container">
-    <h1>Ponyracer</h1>
-  </div>
 <pr-menu></pr-menu>
-<pr-races></pr-races>
+<div class="container" style="margin-top: 70px;">
+  <router-outlet></router-outlet>
+</div>
