--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,9 +3,10 @@
     <span class="navbar-toggler-icon"></span>
   </button>
     <div id="navbar" class="navbar-collapse" [class.collapse]="navbarCollapsed">
+      <a routerLink='/' class="nav-link">PonyRacer</a>
      <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link">Races</a>
+        <a  routerLink='races' class="nav-link">Races</a>
       </li>
      </ul>
     </div>
