--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="text-center" style="margin-top: 100px">
   <h1>Ponyracer <small>Always a pleasure to bet on ponies</small></h1>
+  <a routerLink='register' class="nav-link">Register</a>
   <a routerLink='races' class="nav-link">Races</a>
 </div>
