--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,13 +1,46 @@
-<h2>Registration</h2>
-<form class="form-group" (submit)="register()" [formGroup]="userForm">
-    <label for="login">Login</label>
-    <input type="text" name="login" class="form-control" formControlName="login">
-    <div *ngIf="userForm.get('login').dirty && userForm.get('login').hasError('required')">Login is required</div>
-    <label for="password">Password</label>
-    <input type="password" name="password" class="form-control" formControlName="password">
-    <div *ngIf="userForm.get('password').dirty && userForm.get('password').hasError('required')">Password is required</div>
-    <label for="birthYear" >Birth Year</label>
-    <input type="number" name="birthYear" class="form-control" formControlName="birthYear">
-    <div *ngIf="userForm.get('birthYear').dirty && userForm.get('birthYear').hasError('required')">Birth year is required</div>
-    <button type="submit" [disabled]="userForm.invalid">Let's go !</button>
-</form>
+<div class="row">
+    <div class="col-md-4 offset-md-4">
+      <h1>Sign up</h1>
+  
+      <div id="registration-error" class="alert alert-danger" *ngIf="registrationFailed">
+        <button type="button" class="close" aria-label="Close" (click)="registrationFailed = false"><span aria-hidden="true">&#215;</span></button>
+        Try again with another login.
+      </div>
+  
+      <form (ngSubmit)="register()" [formGroup]="userForm">
+  
+        <div class="form-group">
+          <label for="login" id="login-label">Login</label>
+          <input id="login" class="form-control" formControlName="login">
+          <div id="login-warning" *ngIf="loginCtrl.dirty && loginCtrl.hasError('required')">Login is required</div>
+          <div id="login-length-error" *ngIf="loginCtrl.dirty && loginCtrl.hasError('minlength')">Your login should be at least 3 characters</div>
+        </div>
+  
+        <div formGroupName="passwordForm">
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input id="password" class="form-control" type="password" formControlName="password">
+            <div *ngIf="passwordCtrl.dirty && passwordCtrl.hasError('required')">Password is required</div>
+          </div>
+          <div class="form-group">
+            <label for="confirm">Confirm password</label>
+            <input id="confirm" class="form-control" type="password" formControlName="confirmPassword">
+            <div *ngIf="confirmPasswordCtrl.dirty && confirmPasswordCtrl.hasError('required')">Confirming password is required</div>
+          </div>
+          <div id="password-matching-error" *ngIf="passwordForm.dirty && passwordForm.hasError('matchingError')">Your password does not match</div>
+        </div>
+  
+        <div class="form-group">
+          <label for="birthYear">Birth year</label>
+          <input id="birthYear" class="form-control" type="number" formControlName="birthYear">
+          <div *ngIf="birthYearCtrl.dirty && birthYearCtrl.hasError('required')">Birth year is required</div>
+          <div id="invalid-year-error" *ngIf="birthYearCtrl.dirty && (birthYearCtrl.hasError('min') || birthYearCtrl.hasError('max'))">
+            This is not a valid year
+          </div>
+        </div>
+  
+        <button class="btn btn-primary" type="submit" [disabled]="userForm.invalid">Let's Go!</button>
+      </form>
+    </div>
+  </div>
+  
