--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -24,7 +24,7 @@
           </div>
           <div class="form-group">
             <label for="confirm">Confirm password</label>
-            <input id="confirm" class="form-control" type="password" formControlName="confirmPassword">
+            <input id="confirm" class="form-control" name="password" type="password" formControlName="confirmPassword">
             <div *ngIf="confirmPasswordCtrl.dirty && confirmPasswordCtrl.hasError('required')">Confirming password is required</div>
           </div>
           <div id="password-matching-error" *ngIf="passwordForm.dirty && passwordForm.hasError('matchingError')">Your password does not match</div>
