--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,14 +1,23 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
+
   <button type="button" class="navbar-toggler navbar-toggler-right" (click)="toggleNavbar()">
     <span class="navbar-toggler-icon"></span>
   </button>
+
     <div id="navbar" class="navbar-collapse" [class.collapse]="navbarCollapsed">
       <a routerLink='/' class="nav-link">PonyRacer</a>
      <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a  routerLink='races' class="nav-link">Races</a>
-      </li>
-     </ul>
-    </div>
+      <div class="nav navbar-nav">
+        <li class="nav-item">
+          <a  routerLink='races' class="nav-link">Races</a>
+        </li>
+        <span class="nav-item navbar-text mr-2" *ngIf="user != null">
+          {{ user.login }}
+        <span class="fa fa-star"></span>
+           {{ user.money }}
+        </span>
+      </div>  
+    </ul>
+  </div>
 </nav>
 
