--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -16,7 +16,7 @@
           <div id="login-length-error" *ngIf="loginCtrl.dirty && loginCtrl.hasError('minlength')">Your login should be at least 3 characters</div>
         </div>
   
-        <div formGroupName="passwordForm">
+        <div formGroupName="userForm">
           <div class="form-group">
             <label for="password">Password</label>
             <input id="password" class="form-control" type="password" formControlName="password">
