--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,5 +3,6 @@
   <div *ngIf="user == undefined">
     <a routerLink='register' class="nav-link">Register</a>
     <a routerLink='login' class="nav-link">Login</a>
+    <a routerLink='races' class="nav-link">Races</a>
   </div>
 </div>
