--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -16,6 +16,9 @@
         <span class="fa fa-star"></span>
            {{ user.money }}
         </span>
+        <a *ngIf="user != null" class="nav-item nav-link" (click)="logout($event)">
+          <span class="fa fa-power-off"></span>
+        </a>
       </div>  
     </ul>
   </div>
