--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,13 @@
 <div class="text-center" style="margin-top: 100px">
   <h1>Ponyracer <small>Always a pleasure to bet on ponies</small></h1>
-  <div *ngIf="user == undefined">
-    <a routerLink='register' class="nav-link">Register</a>
-    <a routerLink='login' class="nav-link">Login</a>
-  </div>
 </div>
+
+<div class="text-center" *ngIf="!user; else loggedIn">
+  <a class="btn btn-large btn-primary mr-2" routerLink="/login">Login</a>
+  <a class="btn btn-large btn-primary" routerLink="/register">Register</a>
+</div>
+<ng-template #loggedIn>
+  <div class="text-center">
+    <a class="btn btn-large btn-primary" routerLink="/races">Races</a>
+  </div>
+</ng-template>
