--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,23 +1,26 @@
-  <div class="row">
-    <div class="col-md-4 offset-md-4">
+<div class="row">
+  <div class="col-md-4 offset-md-4">
+    <h1>Log in</h1>
 
-      <h1>Log in</h1>
-      
-      <div class="alert alert-danger" *ngIf="authenticationFailed">Nope, try again</div>
-
-      <form (submit)="authenticate()" #userForm="ngForm">
-        <div class="form-group" >
-        <label for="login">login </label>
-        <input class="form-control" name="login" type="text" FormControlName="login" [(ngModel)]="credentials.login" required>
-        </div>
-
-        <div class="form-group">
-        <label for="password">Password </label>
-        <input class="form-control" name="password" type="password" FormControlName="password" [(ngModel)]="credentials.password" required>
-        </div>
-
-        <button class="btn btn-primary" type="submit" [disabled]="userForm.invalid">Log In</button>
-      </form>
-
+    <div class="alert alert-danger" *ngIf="authenticationFailed">
+      <button type="button" class="close" aria-label="Close" (click)="authenticationFailed = false"><span aria-hidden="true">&#215;</span></button>
+      Nope, try again.
     </div>
+
+    <form (ngSubmit)="authenticate()" #loginForm="ngForm">
+      <div class="form-group">
+        <label for="login">Login</label>
+        <input id="login" class="form-control" name="login" [(ngModel)]="credentials.login" required #loginCtrl="ngModel">
+        <div *ngIf="loginCtrl.control.dirty && loginCtrl.control.hasError('required')">Login is required</div>
+      </div>
+
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input id="password" class="form-control" type="password" name="password" [(ngModel)]="credentials.password" required #passwordCtrl="ngModel">
+        <div *ngIf="passwordCtrl.control.dirty && passwordCtrl.control.hasError('required')">Password is required</div>
+      </div>
+
+      <button class="btn btn-primary" type="submit" [disabled]="loginForm.invalid">Log me in!</button>
+    </form>
   </div>
+</div>
