--- a/src/app/live/live.component.html
+++ b/src/app/live/live.component.html
@@ -1,7 +1,7 @@
 <div>
-  <h2>{{ raceModel?.name }}</h2>
+  <h2>{{ raceModel.name }}</h2>
   <div class="alert alert-danger" *ngIf="error">A problem occurred during the live.</div>
-  <div id="live-race" [ngSwitch]="raceModel?.status">
+  <div id="live-race" [ngSwitch]="raceModel.status">
     <div *ngSwitchCase="'FINISHED'">
       <div *ngIf="!winners.length; else displayWinners">The race is over.</div>
       <ng-template #displayWinners>
